--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mpmc",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
@@ -53,6 +53,7 @@
     "dotenv": "^8.2.0",
     "extra-promise": "^0.9.0",
     "fastify": "^3.5.1",
+    "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
     "fastify-plugin": "^2.3.4",
     "fastify-websocket": "^2.0.10",
