--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">=12"
   },
   "devDependencies": {
+    "@blackglory/jest-matchers": "^0.1.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/app-root-path": "^1.2.4",
@@ -38,6 +39,7 @@
     "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "ajv": "^7.0.0-beta.0",
     "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "jest": "^26.5.2",
