--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.0",
     "@types/jest": "^26.0.14",
+    "@types/jest-json-schema": "^2.1.2",
     "@types/node": "^14.11.7",
     "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
@@ -45,6 +46,7 @@
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "jest-extended": "^0.11.5",
+    "jest-json-schema": "^2.1.0",
     "nodemon": "^2.0.4",
     "pino-pretty": "^4.3.0",
     "ts-jest": "^26.4.1",
