chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "@types/better-sqlite3": "^5.4.0",
     "@types/jest": "^26.0.14",
     "@types/jest-json-schema": "^2.1.2",
-    "@types/node": "^14.11.7",
+    "@types/node": "^14.11.10",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "ajv": "^7.0.0-beta.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "ajv": "^6.12.6",
     "cross-env": "^7.0.2",
-    "eslint": "^7.10.0",
+    "eslint": "^7.11.0",
     "husky": "^4.3.0",
-    "jest": "^26.5.2",
+    "jest": "^26.5.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^2.1.0",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.5",
     "pino-pretty": "^4.3.0",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
@@ -59,11 +59,11 @@
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
-    "extra-promise": "^0.9.0",
-    "fastify": "^3.5.1",
+    "extra-promise": "^0.9.1",
+    "fastify": "^3.6.0",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
-    "fastify-plugin": "^2.3.4",
+    "fastify-plugin": "^3.0.0",
     "fastify-websocket": "^2.0.10",
     "rxjs": "^7.0.0-beta.7"
   }
