--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
-    "ajv": "^6.12.6",
+    "ajv": "^7.0.0-beta.1",
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "husky": "^4.3.0",
@@ -67,6 +67,7 @@
     "fastify-cors": "^4.1.0",
     "fastify-plugin": "^3.0.0",
     "fastify-websocket": "^2.0.10",
+    "return-style": "^0.10.1",
     "rxjs": "^7.0.0-beta.7"
   }
 }
