--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,9 @@
   , "baseUrl": "."
   , "paths": {
       "@src/*": ["src/*"]
+    , "@dao": ["src/dao/index"]
+    , "@dao/*": ["src/dao/*"]
+    , "@config": ["src/config"]
     , "@test/*": ["__tests__/*"]
     , "@services/*": ["src/services/*"]
     }
