--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
-    "build": "cross-env NODE_ENV=production tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./lib",
+    "build": "cross-env NODE_ENV=production tsc --project tsconfig.build.json && tscpaths --project tsconfig.build.json --src ./src --out ./lib",
     "start": "cross-env NODE_ENV=production node lib/index.js",
     "start:http2": "cross-env NODE_ENV=production MPMC_HTTP2=true node lib/index.js",
     "docker:build": "docker build --tag mpmc .",
-    "docker:test": "docker-compose -f docker-compose.test.yml run --rm sut"
+    "docker:test": "docker-compose --file docker-compose.test.yml run --rm sut"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn test",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "yarn lint && yarn test && yarn build",
+      "commit-msg": "commitlint --env HUSKY_GIT_PARAMS"
     }
   },
   "engines": {
