--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-websocket": "^2.0.10",
-    "rxjs": "^7.0.0-beta.7"
+    "fastify-websocket": "^2.0.10"
   }
 }
