--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "fastify": "^3.6.0",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
-    "fastify-plugin": "^3.0.0",
-    "fastify-websocket": "^2.0.10"
+    "fastify-plugin": "^3.0.0"
   }
 }
