--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.0",
+    "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.14",
     "@types/jest-json-schema": "^2.1.2",
     "@types/node": "^14.11.10",
@@ -66,6 +67,7 @@
     "fastify": "^3.6.0",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
-    "fastify-plugin": "^3.0.0"
+    "fastify-plugin": "^3.0.0",
+    "fs-extra": "^9.0.1"
   }
 }
