--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@blackglory/better-sqlite3-migrations": "^0.1.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
@@ -68,6 +69,7 @@
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
     "fastify-plugin": "^3.0.0",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "migrations-file": "^0.1.0"
   }
 }
