--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "fastify-cors": "^4.1.0",
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
-    "migrations-file": "^0.1.1"
+    "migrations-file": "^0.1.1",
+    "return-style": "^0.10.1"
   }
 }
