--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,8 @@
       "@src/*": ["src/*"]
     , "@dao": ["src/dao/index"]
     , "@dao/*": ["src/dao/*"]
+    , "@core": ["src/core/index"]
+    , "@core/*": ["src/core/*"]
     , "@config": ["src/config"]
     , "@test/*": ["__tests__/*"]
     , "@services/*": ["src/services/*"]
