--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
     "node": ">=12"
   },
   "devDependencies": {
-    "@blackglory/jest-matchers": "^0.1.4",
+    "@blackglory/jest-matchers": "^0.1.5",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/fs-extra": "^9.0.4",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.17",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.14.0",
-    "husky": "^4.3.0",
+    "@types/node": "^14.14.11",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.15.0",
+    "husky": "^4.3.5",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^2.1.0",
@@ -52,19 +52,19 @@
     "pino-pretty": "^4.3.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.1.2"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
-    "ajv": "^7.0.0-beta.6",
+    "ajv": "^7.0.0-rc.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
     "extra-promise": "^0.9.5",
-    "fastify": "^3.8.0",
+    "fastify": "^3.9.1",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.0.0",
     "fastify-plugin": "^3.0.0",
