--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/jest": "^26.0.17",
     "@types/jest-json-schema": "^2.1.3",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.11",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
@@ -69,6 +70,7 @@
     "fastify-cors": "^5.0.0",
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
+    "lodash": "^4.17.20",
     "migrations-file": "^0.1.1",
     "return-style": "^0.10.1"
   }
