--- a/package.json
+++ b/package.json
@@ -62,12 +62,13 @@
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
     "@blackglory/errors": "^0.1.2",
-    "@blackglory/types": "^0.2.0",
+    "@blackglory/types": "^0.2.1",
     "ajv": "^7.0.2",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
+    "env-var": "^7.0.0",
     "extra-promise": "^0.13.7",
     "fastify": "^3.9.2",
     "fastify-bearer-auth": "^5.0.2",
