--- a/package.json
+++ b/package.json
@@ -68,15 +68,14 @@
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
-    "env-var": "^7.0.0",
     "extra-promise": "^0.13.7",
     "fastify": "^3.9.2",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.1.0",
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^9.0.1",
-    "lodash": "^4.17.20",
     "migrations-file": "^0.1.1",
-    "return-style": "^0.10.1"
+    "return-style": "^0.10.1",
+    "value-getter": "^0.1.2"
   }
 }
