--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.12",
+    "@blackglory/jest-matchers": "^0.1.13",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@types/app-root-path": "^1.2.4",
@@ -44,13 +44,13 @@
     "@types/fs-extra": "^9.0.8",
     "@types/jest": "^26.0.20",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.34",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "extra-fetch": "^1.3.0",
-    "extra-request": "^2.1.0",
+    "extra-request": "^2.1.1",
     "extra-response": "^0.3.3",
     "husky": "4",
     "jest": "^26.6.3",
@@ -69,25 +69,27 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@blackglory/better-sqlite3-migrations": "^0.1.5",
+    "@blackglory/better-sqlite3-migrations": "^0.1.6",
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
-    "@blackglory/types": "^0.3.3",
+    "@blackglory/types": "^0.4.1",
     "ajv": "^7.2.1",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
-    "extra-promise": "^0.15.4",
+    "extra-promise": "^0.15.6",
     "fastify": "^3.14.0",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^5.2.0",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^9.1.0",
+    "hotypes": "^0.1.3",
+    "justypes": "^0.1.1",
     "migrations-file": "^0.1.5",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.2",
-    "value-getter": "^0.1.12"
+    "value-getter": "^0.1.13"
   }
 }
