--- a/package.json
+++ b/package.json
@@ -78,13 +78,13 @@
     "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
     "dotenv": "^9.0.0",
+    "extra-filesystem": "^0.2.11",
     "extra-promise": "^0.16.4",
     "fastify": "^3.15.1",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^6.0.1",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
-    "fs-extra": "^10.0.0",
     "hotypes": "^0.2.0",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
