--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --config jest.config.js --no-cache",
+    "test": "jest --runInBand --config jest.config.js --no-cache",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
+    "test:coverage": "jest --runInBand --coverage --config jest.config.js",
     "dev": "nodemon",
     "dev:http2": "cross-env CHAN_HTTP2=true nodemon",
     "clean": "rimraf lib",
@@ -35,17 +35,17 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.16",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@blackglory/jest-matchers": "^0.1.17",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/common-tags": "^1.8.0",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.44",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
     "extra-fetch": "^1.7.1",
@@ -57,7 +57,7 @@
     "jest-json-schema": "^5.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^4.7.1",
+    "pino-pretty": "^4.8.0",
     "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.0",
@@ -72,12 +72,12 @@
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
     "@blackglory/types": "^0.4.2",
-    "ajv": "^8.2.0",
+    "ajv": "^8.3.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
-    "dotenv": "^9.0.0",
-    "extra-filesystem": "^0.2.11",
+    "dotenv": "^9.0.2",
+    "extra-filesystem": "^0.3.0",
     "extra-promise": "^0.16.4",
     "fastify": "^3.15.1",
     "fastify-bearer-auth": "^5.1.0",
