--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,3 +1,8 @@
 sut:
-  build: .
+  build:
+    dockerfile: Dockerfile.test
+    context: .
+    args:
+      - 'HTTP_PROXY'
+      - 'HTTPS_PROXY'
   command: test
