--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,8 +1,11 @@
-sut:
-  build:
-    dockerfile: Dockerfile.test
-    context: .
-    args:
-      - 'HTTP_PROXY'
-      - 'HTTPS_PROXY'
-  command: test
+version: '3.8'
+
+services:
+  test:
+    build:
+      dockerfile: Dockerfile.test
+      context: .
+      args:
+        - 'HTTP_PROXY'
+        - 'HTTPS_PROXY'
+    command: test
